Fixed wrong text color on dark mode

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -4,7 +4,7 @@
     font-weight: 400;
   
     color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
+    color: #213547;
     background-color: #e5e5e5;
   
     font-synthesis: none;
@@ -44,14 +44,6 @@ h1, h2 {
     padding: 0 1rem;
     margin: 0 auto;
 }
-
-
-@media (prefers-color-scheme: light) {
-    :root {
-      color: #213547;
-      background-color: #ffffff;
-    }
-  }
 
 @media (min-width: 576px) {
     .container {
